# encode_weak_cisco

./: Makefile  Makefile.am  README.md  configure.ac  encode_weak_cisco.1.in  encode_weak_cisco.cpp
debian-proto/: README.source  control  install
debian-proto-9/: changelog  control  copyright
